--- a/ISW_Grupo6_4k2/Practicos/TP6/Resolucion_06_ImplementacionHistoriaDeUsuario/DeliverEat/Chekout.html
+++ b/ISW_Grupo6_4k2/Practicos/TP6/Resolucion_06_ImplementacionHistoriaDeUsuario/DeliverEat/Chekout.html
@@ -13,10 +13,24 @@
     <!-- Importación de DateTimePicker de Bootstrap -->
     <link href="css/bootstrap-datetimepicker.css" rel="stylesheet">
     <script src="js/bootstrap-datetimepicker.min.js"></script>
+
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=PIPM0KJwm-La7Bw_eeJnGtjG&callback=initMap">
+    </script>
+
+    <!--
+    <style>
+        #map {
+            height: 100px;
+            width: 100px;
+        }
+    </style> -->
     <!-- Referencia a la Hoja de Estilos -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+
     <!-- Inicio de NavBar -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container">
@@ -66,51 +80,14 @@
             <h2>Finalizar Pedido</h2>
         </div>
         <div class="row">
-            <!-- Inicio del carrito -->
-            <div class="col-md-4 order-md-2 mb-4">
-                <h4 class="d-flex justify-content-between align-items-center mb-3">
-                    <span class="text">Tu Carrito</span>
-                </h4>
-                <button id="agregarItem" style="margin-bottom: 10px" type="button" class="btn btn-success">Agregar item</button>
-                <button id="quitarItem" style="margin-bottom: 10px" type="button" class="btn btn-danger">Vaciar Carrito</button>
-                <ul id="listaCarrito" class="list-group mb-3">
-                    <li class="list-group-item d-flex justify-content-between lh-condensed">
-                        <div>
-                            <h6 class="my-0">Lomo Completo</h6>
-                            <small class="text-muted">Lomo, queso, huevo, tomate, lechuga, mayonesa, jamón.</small>
-                        </div>
-                        <span class="text-muted precio">120</span>
 
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between lh-condensed">
-                        <div>
-                            <h6 class="my-0">Lomo Americano</h6>
-                            <small class="text-muted">Lomo, cebolla salteada, queso, huevo revuelto, panceta, mayonesa y salsa BBQ.</small>
-                        </div>
-                        <span class="text-muted precio ">180</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between lh-condensed">
-                        <div>
-                            <h6 class="my-0">Lomo Vegano</h6>
-                            <small class="text-muted">Berenjena, tomate, lechuga, huevo, queso y mayonesa.</small>
-                        </div>
-                        <span class="text-muted precio">100</span>
-                    </li>
-                </ul>
-
-                <form class="card p-2">
-                    <div id="totalCarrito" class="text-right">
-                    </div>
-                </form>
-            </div>
-            <!-- Fin del carrito -->
             <!-- Inicio formulario del usuario -->
             <div class="col-md-8 order-md-1">
                 <h4 class="mb-3">A dónde te lo enviamos?</h4>
                 <form class="needs-validation" novalidate>
                     <div class="mb-3">
                         <label for="address">Dirección</label>
-                        <input type="text" class="form-control" id="address" placeholder="Av. Chacabuco 123" required>
+                        <input type="text" class="form-control" id="address" placeholder="Av. Chacabuco 123" ng-model="direccion" required>
                         <div class="invalid-feedback">
                             Ingrese una dirección válida.
                         </div>
@@ -138,6 +115,17 @@
                         </div>
 
                     </div>
+
+                    <script>
+                        function initMap() {
+                            var options = {
+                                zoom = 8,
+                                center: { lat: 42.3601, lng: -71.0589 }
+                            }
+
+                            var map = new google.maps.Map(document.getElementById('map'), options);
+                        }
+                    </script>
                     <hr class="mb-4">
                     <h4 class="mb-3">Cuando lo querés?</h4>
 
@@ -226,6 +214,97 @@
                 </form>
 
             </div>
+
+            <div class="col-md-4 order-md-2 mb-4">
+                <!-- Inicio Google maps -->
+                <!-- Mapa -->
+                <div id="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13624.914338136074!2d-64.18331629999999!3d-31.3802601!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1569071315768!5m2!1ses-419!2sar"
+                            width="400"
+                            height="300">
+                    </iframe>
+                </div>
+
+                <!-- Inicializar mapa -->
+                <script>
+                    var map, infoWindow;
+                    function initMap() {
+                        map = new google.maps.Map(document.getElementById('map'), {
+                            center: { lat: -34.397, lng: 150.644 },
+                            zoom: 6
+                        });
+                        infoWindow = new google.maps.InfoWindow;
+
+                        // Try HTML5 geolocation.
+                        if (navigator.geolocation) {
+                            navigator.geolocation.getCurrentPosition(function (position) {
+                                var pos = {
+                                    lat: position.coords.latitude,
+                                    lng: position.coords.longitude
+                                };
+
+                                infoWindow.setPosition(pos);
+                                infoWindow.setContent('Location found.');
+                                infoWindow.open(map);
+                                map.setCenter(pos);
+                            }, function () {
+                                handleLocationError(true, infoWindow, map.getCenter());
+                            });
+                        } else {
+                            // Browser doesn't support Geolocation
+                            handleLocationError(false, infoWindow, map.getCenter());
+                        }
+                    }
+
+                    function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+                        infoWindow.setPosition(pos);
+                        infoWindow.setContent(browserHasGeolocation ?
+                            'Error: The Geolocation service failed.' :
+                            'Error: Your browser doesn\'t support geolocation.');
+                        infoWindow.open(map);
+                    }
+                </script>
+                <!-- Fin google maps -->
+                <!-- Inicio del carrito -->
+                <div>
+                    <h4 class="d-flex justify-content-between align-items-center mb-3">
+                        <span class="text">Tu Carrito</span>
+                    </h4>
+                    <button id="agregarItem" style="margin-bottom: 10px" type="button" class="btn btn-success">Agregar item</button>
+                    <button id="quitarItem" style="margin-bottom: 10px" type="button" class="btn btn-danger">Vaciar Carrito</button>
+                    <ul id="listaCarrito" class="list-group mb-3">
+                        <li class="list-group-item d-flex justify-content-between lh-condensed">
+                            <div>
+                                <h6 class="my-0">Lomo Completo</h6>
+                                <small class="text-muted">Lomo, queso, huevo, tomate, lechuga, mayonesa, jamón.</small>
+                            </div>
+                            <span class="text-muted precio">120</span>
+
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between lh-condensed">
+                            <div>
+                                <h6 class="my-0">Lomo Americano</h6>
+                                <small class="text-muted">Lomo, cebolla salteada, queso, huevo revuelto, panceta, mayonesa y salsa BBQ.</small>
+                            </div>
+                            <span class="text-muted precio ">180</span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between lh-condensed">
+                            <div>
+                                <h6 class="my-0">Lomo Vegano</h6>
+                                <small class="text-muted">Berenjena, tomate, lechuga, huevo, queso y mayonesa.</small>
+                            </div>
+                            <span class="text-muted precio">100</span>
+                        </li>
+                    </ul>
+
+                    <form class="card p-2">
+                        <div id="totalCarrito" class="text-right">
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+            <!-- Fin del carrito -->
         </div>
 
     </div>
@@ -233,8 +312,8 @@
 
 
     <script>
-        // Example starter JavaScript for disabling form submissions if there are invalid fields
-        
+            // Example starter JavaScript for disabling form submissions if there are invalid fields
+
     </script>
     <!-- Referencia al archivo contenedor de los scripts -->
     <script src="js/scripts.js"></script>
