--- a/ISW_Grupo6_4k2/Practicos/TP6/Resolucion_06_ImplementacionHistoriaDeUsuario/DeliverEat/Chekout.html
+++ b/ISW_Grupo6_4k2/Practicos/TP6/Resolucion_06_ImplementacionHistoriaDeUsuario/DeliverEat/Chekout.html
@@ -3,28 +3,67 @@
 <head>
     <meta charset="utf-8" />
     <title>DeliverEat - Finalizar Pedido</title>
+    <!-- Importación de Jquery -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Importación de Bootstrap 4 -->
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <!-- Importación de Jquery -->
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
     <!-- Importación de FontsAwesome -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <!-- Importación de DateTimePicker de Bootstrap -->
     <link href="css/bootstrap-datetimepicker.css" rel="stylesheet">
     <script src="js/bootstrap-datetimepicker.min.js"></script>
 
+    <script>
+        function initMap() { } // now it IS a function and it is in global
+
+        $(() => {
+            initMap = function () {
+                var map, infoWindow;
+                function initMap() {
+                    map = new google.maps.Map(document.getElementById('map'), {
+                        center: { lat: -34.397, lng: 150.644 },
+                        zoom: 6
+                    });
+                    infoWindow = new google.maps.InfoWindow;
+
+                    // Try HTML5 geolocation.
+                    if (navigator.geolocation) {
+                        navigator.geolocation.getCurrentPosition(function (position) {
+                            var pos = {
+                                lat: position.coords.latitude,
+                                lng: position.coords.longitude
+                            };
+
+                            infoWindow.setPosition(pos);
+                            infoWindow.setContent('Location found.');
+                            infoWindow.open(map);
+                            map.setCenter(pos);
+                        }, function () {
+                            handleLocationError(true, infoWindow, map.getCenter());
+                        });
+                    } else {
+                        // Browser doesn't support Geolocation
+                        handleLocationError(false, infoWindow, map.getCenter());
+                    }
+                }
+
+                function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+                    infoWindow.setPosition(pos);
+                    infoWindow.setContent(browserHasGeolocation ?
+                        'Error: The Geolocation service failed.' :
+                        'Error: Your browser doesn\'t support geolocation.');
+                    infoWindow.open(map);
+                }
+            }
+        })
+    </script>
     <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=PIPM0KJwm-La7Bw_eeJnGtjG&callback=initMap">
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPXGhR0VP3gz18DxM1KgFVUdzcguwZJjU&callback=initMap">
     </script>
 
-    <!--
-    <style>
-        #map {
-            height: 100px;
-            width: 100px;
-        }
-    </style> -->
+
     <!-- Referencia a la Hoja de Estilos -->
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -77,7 +116,7 @@
 
     <div class="container">
         <div class="py-5 text-center">
-            <h2>Finalizar Pedido</h2>
+            <h2>Finalizar Pedido Local Adherido</h2>
         </div>
         <div class="row">
 
@@ -116,16 +155,7 @@
 
                     </div>
 
-                    <script>
-                        function initMap() {
-                            var options = {
-                                zoom = 8,
-                                center: { lat: 42.3601, lng: -71.0589 }
-                            }
 
-                            var map = new google.maps.Map(document.getElementById('map'), options);
-                        }
-                    </script>
                     <hr class="mb-4">
                     <h4 class="mb-3">Cuando lo querés?</h4>
 
@@ -225,45 +255,7 @@
                     </iframe>
                 </div>
 
-                <!-- Inicializar mapa -->
-                <script>
-                    var map, infoWindow;
-                    function initMap() {
-                        map = new google.maps.Map(document.getElementById('map'), {
-                            center: { lat: -34.397, lng: 150.644 },
-                            zoom: 6
-                        });
-                        infoWindow = new google.maps.InfoWindow;
-
-                        // Try HTML5 geolocation.
-                        if (navigator.geolocation) {
-                            navigator.geolocation.getCurrentPosition(function (position) {
-                                var pos = {
-                                    lat: position.coords.latitude,
-                                    lng: position.coords.longitude
-                                };
-
-                                infoWindow.setPosition(pos);
-                                infoWindow.setContent('Location found.');
-                                infoWindow.open(map);
-                                map.setCenter(pos);
-                            }, function () {
-                                handleLocationError(true, infoWindow, map.getCenter());
-                            });
-                        } else {
-                            // Browser doesn't support Geolocation
-                            handleLocationError(false, infoWindow, map.getCenter());
-                        }
-                    }
-
-                    function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-                        infoWindow.setPosition(pos);
-                        infoWindow.setContent(browserHasGeolocation ?
-                            'Error: The Geolocation service failed.' :
-                            'Error: Your browser doesn\'t support geolocation.');
-                        infoWindow.open(map);
-                    }
-                </script>
+                
                 <!-- Fin google maps -->
                 <!-- Inicio del carrito -->
                 <div>
@@ -310,11 +302,6 @@
     </div>
 
 
-
-    <script>
-            // Example starter JavaScript for disabling form submissions if there are invalid fields
-
-    </script>
     <!-- Referencia al archivo contenedor de los scripts -->
     <script src="js/scripts.js"></script>
 
