Pequeñas modificaciones a la implementación

--- a/ISW_Grupo6_4k2/Practicos/TP6/Resolucion_06_IU/DeliverEat/Index.html
+++ b/ISW_Grupo6_4k2/Practicos/TP6/Resolucion_06_IU/DeliverEat/Index.html
@@ -189,7 +189,7 @@
                     </ul>
 
                     <form class="card p-2">
-                        <div id="totalCarrito" class="text-right">
+                        <div id="totalCarrito" value="" class="text-right">
                         </div>
                     </form>
                 </div>
@@ -204,7 +204,7 @@
     <!-- Referencia al archivo contenedor de los scripts -->
     <script src="js/scripts.js"></script>
     <script src="js/creditcard.js"></script>
-    <script async
+    <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxqPS7gNBS_-U4G1RSoGyYw3H2EtKgFTI&libraries=places">
     </script>
     <!-- Footer -->
