--- a/ISW_Grupo6_4k2/Practicos/TP6/Resolucion_06_IU/DeliverEat/Index.html
+++ b/ISW_Grupo6_4k2/Practicos/TP6/Resolucion_06_IU/DeliverEat/Index.html
@@ -205,7 +205,7 @@
     <script src="js/scripts.js"></script>
     <script src="js/creditcard.js"></script>
     <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxqPS7gNBS_-U4G1RSoGyYw3H2EtKgFTI&libraries=places">
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxqPS7gNBS_-U4G1RSoGyYw3H2EtKgFTI&libraries=places&callback=initialization">
     </script>
     <!-- Footer -->
     <footer class="text-light" style="margin-top: 20px;">
